# scPhyTr

./: .gitignore  README.md  STATUS.md  env.yml  evogenex_comparison.ipynb  pyproject.toml  test.ipynb
analysis/benchmark/: depth_coevolution.csv  depth_coevolution.py  depth_heritability.py  depth_heritability_calibration.csv  depth_heritability_sweep.csv  depth_plasticity.csv  depth_plasticity.py  depth_plasticity_depthbias.csv  depth_plasticity_recovery.csv  depth_selection.csv  depth_selection.py  emt_concordance.csv  emt_concordance.py  evogenex_bridge.R  evogenex_compare.py  kptracer_coevolution.csv  kptracer_coevolution.py  kptracer_heritability.csv  kptracer_heritability.py  kptracer_pfa_coevolution.csv  path_emt.py  path_morans.py  revbayes_covariate_rates.csv  revbayes_covariate_rates.py  revbayes_covariate_rates_null.csv  revbayes_rate_shifts.csv  revbayes_rate_shifts.py  revbayes_real_discoveries.csv  runtime_scaling.csv  runtime_scaling.py  sim_heritability.py  simulation_study.csv  simulation_study.py  spatial_clonal_modules.csv  (+10 more)
docs/: 01_methods.md  02_inference_engines.md  03_factor_analysis.md  04_real_data_kptracer.md  05_spatial.md  inference_engines.md  methods.md
manuscript/: main.tex  references.bib
notebooks/: _build_roundtrip.py  _build_tutorial.py  scphytr_roundtrip.ipynb  scphytr_tutorial.ipynb
paper/: OUTLINE.md
scripts/: compare_estep_engines.py  demo_detect_adaptive.py  demo_detect_adaptive_counts.py  demo_em.py  demo_estimate_correlation.py  validate_counts.py  validate_mv.py  validate_pruning.py
tests/: test_integration.py
(+109 files in other folders)
