[tool.poetry]
name = "scphytr"
version = "0.0.0"
description = "Phylogenetic comparative methods for single-cell gene expression data."
license = "MIT"
authors = ["pedrofale <pedro.miguel.ferreira.pf@gmail.com>"]
readme = "README.md"
repository = "https://github.com/pedrofale/scphytr"
packages = [{include = "scphytr", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "*"
scipy = "*"
pandas = "*"
jax = "*"
optax = "*"
blackjax = "<1.5"

